--- a/.github/workflows/artifact-build.yml
+++ b/.github/workflows/artifact-build.yml
@@ -30,7 +30,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Extract clean version
-        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV    
+        shell: bash
+        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - name: Show version
+        shell: bash        
+        run: echo "Using version: $VERSION"
       - name: Checkout
         uses: actions/checkout@v4
         with:
