--- a/.github/workflows/artifact-build.yml
+++ b/.github/workflows/artifact-build.yml
@@ -33,8 +33,8 @@ jobs:
         shell: bash
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
       - name: Show version
-        shell: bash        
-        run: echo "Using version: $VERSION"
+        shell: bash
+        run: echo "Using version $VERSION"
       - name: Checkout
         uses: actions/checkout@v4
         with:
