--- a/.github/workflows/artifact-build.yml
+++ b/.github/workflows/artifact-build.yml
@@ -34,7 +34,8 @@ jobs:
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
       - name: Show version
         shell: bash
-        run: echo "Using version $VERSION"
+        run: |
+          echo "Using version: $VERSION"
       - name: Checkout
         uses: actions/checkout@v4
         with:
