add version info to docker publish

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,6 +19,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
+  VERSION: ${{ github.ref_name }}
 
 jobs:
   build:
@@ -48,6 +49,14 @@ jobs:
       id-token: write
 
     steps:
+      - name: Extract clean version
+        shell: bash
+        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - name: Show version
+        shell: bash
+        run: |
+          echo "Using version: $VERSION"
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
