--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,6 +22,19 @@ env:
   VERSION: ${{ github.ref_name }}
 
 jobs:
+
+  setversion:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set version fallback
+        run: |
+          if [[ "$GITHUB_REF_TYPE" == "tag" ]]; then
+            echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+          else
+            echo "VERSION=0.0.0-${GITHUB_SHA::7}" >> $GITHUB_ENV
+          fi
+
   build:
     runs-on: ubuntu-latest
 
