--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,23 +19,8 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-  VERSION: ${{ github.ref_name }}
 
 jobs:
-
-  setversion:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Show ref type
-        run: echo $GITHUB_REF_TYPE
-      - name: Set version fallback
-        run: |
-          if [[ "$GITHUB_REF_TYPE" == "tag" ]]; then
-            echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
-          else
-            echo "VERSION=0.0.0-${GITHUB_SHA::7}" >> $GITHUB_ENV
-          fi
 
   build:
     needs: setversion
@@ -63,11 +48,16 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
-
     steps:
-      - name: Extract clean version
-        shell: bash
-        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - name: Show ref type
+        run: echo $GITHUB_REF_TYPE
+      - name: Set version 
+        run: |
+          if [[ "$GITHUB_REF_TYPE" == "tag" ]]; then
+            echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+          else
+            echo "VERSION=0.0.0-${GITHUB_SHA::7}" >> $GITHUB_ENV
+          fi
       - name: Show version
         shell: bash
         run: |
@@ -75,7 +65,6 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
-
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
