--- a/.github/workflows/artifact-build.yml
+++ b/.github/workflows/artifact-build.yml
@@ -57,16 +57,24 @@ jobs:
           if [ "${{ matrix.target }}" == "win-x64" ]; then
             # Pack to zip for Windows
             7z a -tzip "${release_name}.zip" "./${release_name}/*"
+            echo "artifact_name=${release_name}.zip" >> $GITHUB_ENV
           else
-          tar czvf "${release_name}.tar.gz" "$release_name"
+            tar czvf "${release_name}.tar.gz" "$release_name"
+            echo "artifact_name=${release_name}.tar.gz" >> $GITHUB_ENV
           fi
 
           # Delete output directory
           rm -r "$release_name"
 
-      - name: Publish
-        uses: softprops/action-gh-release@v2
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          files: "App*"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: "${{ matrix.target }}"
+          path: "${{ env.artifact_name }}"
+
+      # - name: Publish
+      #   uses: softprops/action-gh-release@v2
+      #   with:
+      #     files: "App*"
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
