--- a/.github/workflows/artifact-build.yml
+++ b/.github/workflows/artifact-build.yml
@@ -3,8 +3,8 @@ name: Publish
 on:
   release:
     types: [published]
-  push:
-    tags: [ 'v*.*.*' ]
+  # push:
+  #   tags: [ 'v*.*.*' ]
 
 env:
   VERSION: ${{ github.ref_name }}
@@ -66,15 +66,9 @@ jobs:
           # Delete output directory
           rm -r "$release_name"
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Publish
+        uses: softprops/action-gh-release@v2
         with:
-          name: "${{ matrix.target }}"
-          path: "${{ env.artifact_name }}"
-
-      # - name: Publish
-      #   uses: softprops/action-gh-release@v2
-      #   with:
-      #     files: "App*"
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          files: "App*"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
