--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,7 +14,14 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    
+    groups:
+      nuget-version-updates:
+        applies-to: version-updates
+        patterns: ["*"]
+        update-types:
+          - "minor"
+          - "patch"
+
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
