--- a/front-react/package.json
+++ b/front-react/package.json
@@ -30,7 +30,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "@tanstack/react-query": "^5.90.20",    
+    "react-router-dom": "^7.13.0",
+    "@tanstack/react-query": "^5.90.20",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
