--- a/ChatGpt.Archive.Api/ChatGpt.Archive.Api.csproj
+++ b/ChatGpt.Archive.Api/ChatGpt.Archive.Api.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+	  <AssemblyName>chatgpt-archive-server</AssemblyName>
+	  <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
