--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -23,4 +23,4 @@ WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "ChatGpt.Archive.Api.dll"]
+ENTRYPOINT ["dotnet", "chatgpt-archive-server.dll"]
