--- a/Dockerfile.exporter
+++ b/Dockerfile.exporter
@@ -9,10 +9,10 @@ COPY . ./
 RUN dotnet restore
 
 # Build and publish a release
-RUN dotnet publish ./ChatGPTExport -c Release -o out
+RUN dotnet publish ./ChatGpt.Exporter.Cli -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/runtime:10.0-alpine
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "ChatGPTExport.dll"]
+ENTRYPOINT ["dotnet", "chatgpt-exporter.dll"]
