--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/chatgpt-archive
+  IMAGE_NAME: ${{ github.repository_owner }}/chatgpt-archive-server
 
 jobs:
 
