--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -5,7 +5,9 @@ on:
   push:
     branches: [ "main" ]
     tags: [ 'v*.*.*' ]
-
+  pull_request:
+    branches: [ "main" ]
+    
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository_owner }}/chatgpt-archive-server
