--- a/.github/workflows/docker-publish-cli.yml
+++ b/.github/workflows/docker-publish-cli.yml
@@ -99,7 +99,8 @@ jobs:
         with:
           context: .
           file: Dockerfile.exporter
-          push: ${{ github.event_name != 'pull_request' }}
+          #push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
